<resources>
    <string name="app_name">NotLateApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email">Email *</string>
    <string name="email_login">Email</string>
    <string name="example_email_com">example@email.com</string>
    <string name="password">Password *</string>
    <string name="password_login">Password</string>
    <string name="password_example">Password123</string>
    <string name="login">Log in</string>
    <string name="title_activity_test">test</string>
    <string name="created_event_title">Title:</string>
    <string name="created_event_date">Date:</string>
    <string name="created_event_location">Location:</string>
    <string name="created_event_members">Members:</string>
    <string name="submit_changes">Submit changes</string>
    <string name="register">Register</string>
    <string name="first_name">First Name *</string>
    <string name="last_name">Last Name *</string>
    <string name="firs_name_hint">John</string>
    <string name="last_name_hint">Doe</string>
    <string name="password_again">Password again *</string>
    <string name="required_fields">* Required fields</string>
    <string name="user_name">Username *</string>
    <string name="time">Time:</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string-array name="themes">
        <item>Default Theme</item>
        <item>Dark Theme</item>
    </string-array>

    <string-array name="themes_values">
        <item>default</item>
        <item>dark</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="pick_a_place">Pick a place</string>
    <string name="your_address_comes_here">Your address comes here</string>
    <string name="gender">Gender:</string>
    <string name="username">Username:</string>
    <string name="dummy">dummy</string>
    <string name="e_mail">E-mail:</string>
    <string name="title">Title</string>
    <string name="owner">Owner:</string>
    <string name="events">Events</string>
    <string name="statistics">Statistics</string>
    <string name="profil">Profil</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save_to_calendar">Save to Calendar</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

</resources>
